tests/unit/guardrails/require-pod-securitycontext/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-pod-securitycontext-test
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-pod-securitycontext
    isValidatingPolicy: true
    kind: Pod
    resources:
      - good-pod
    result: pass
  - policy: require-pod-securitycontext
    isValidatingPolicy: true
    kind: Pod
    resources:
      - bad-pod-no-securitycontext
      - bad-pod-runasnonroot-false
    result: fail
